--- a/style1.css
+++ b/style1.css
@@ -1,8 +1,8 @@
 body{
-    background-color: #7cfc00;
+    background-color: grey;
     font-family: 'Montserrat', sans-serif;
     margin: 1.5em;
-    color: darkolivegreen;
+    color: white;
 }
 
 img{
@@ -59,6 +59,8 @@ nav{
   width: 50%;
   z-index: 999;
   text-transform: uppercase;
+  transform: translateX(100%);
+  transition: transform .5s ease-in-out;
 }
 
 nav ul{
@@ -70,7 +72,20 @@ nav ul{
 nav ul a{
   color: black;
   padding: .75em 2em;
-  display:block;
+  display: block;
+  width: 100%;
+}
+
+nav ul a:hover{
+  background: rgb(235, 235, 235)
+}
+
+.close{
+  width: 2em;
+  background: lightgray;
+  height: 2em;
+  float: right;
+  margin: 2em;
 }
 
 .hero{
@@ -81,4 +96,25 @@ nav ul a{
 .dash{
   transform: rotate(270deg);
   margin-top: 20px;
+}
+
+.cc{
+  color: darkolivegreen;
+}
+
+.a{
+  height: 20em;
+  object-fit: cover;
+}
+
+.title{
+  font-size: 1.25rem;
+}
+
+.desc{
+  line-height: 1.48rem;
+}
+
+@media only screen and (min-width: 680px){
+
 }
