--- a/style1.css
+++ b/style1.css
@@ -98,8 +98,12 @@ nav ul a:hover{
   margin-top: 20px;
 }
 
+.more-info{
+  margin-top: 5em;
+}
+
 .cc{
-  color: darkolivegreen;
+  color: white;
 }
 
 .a{
@@ -116,5 +120,165 @@ nav ul a:hover{
 }
 
 @media only screen and (min-width: 680px){
+  body{
+    margin: 1.5em 5em;
+  }
 
+  .cc{
+    color: white;
+  }
+
+  .hero{
+  height: 100vh;
+  }
+
+  .subhead{
+    margin-top: 15em;
+  }
+
+  .dash{
+    margin-top: 3em;
+  }
+
+  .more-info{
+    margin-top: -5em;
+  }
+}
+
+@media only screen and (min-width: 920px){
+header .dashicon{
+    display: none;
+  }
+
+  nav{
+    transform: translateX(0);
+    position: unset;
+    width: auto;
+    height: auto;
+    background: none;
+    color: white;
+  }
+
+  .close{
+    display: none;
+  }
+
+  nav ul{
+    display: flex;
+    margin-top: -5px;
+    background: none;
+  }
+
+  nav ul li a{
+    color: black;
+    padding: .5em 1.5em;
+    font-size: .9em;
+  }
+
+  nav ul li a:hover{
+    background: darkcyan;
+    text-decoration: underline;
+  }
+
+  .hero-img{
+    left: unset;
+    right: 0;
+    width: 50%;
+    height: 42em;
+  }
+
+  .logo{
+    color: white;
+  }
+
+  span{
+    color: lightgreen;
+  }
+
+  .hero{
+    color:white;
+    height: auto;
+    width: 40%;
+    text-align: left;
+    margin-bottom: 5em;
+  }
+
+  .subhead{
+    margin-top: 8em;
+  }
+
+  .cc{
+    color: white;
+  }
+
+  .more-info{
+    margin-top: -8em;
+  }
+
+  .feature{
+    display: grid;
+    grid-template-columns: repeat(2, auto);
+    gap: 3em;
+    margin-top: 15em;
+    margin-bottom: -7em;
+  }
+
+.a{
+  width: 23em;
+}
+
+  .content{
+    text-align: right;
+    width: 25em;
+  }
+
+  .flip_left{
+    grid-template-areas: "left right";
+    /* grid-template-rows: repeat(2, auto); */
+    /* gap: 13em; */
+  }
+
+  .flip_left img{
+    grid-area: left;
+    /* width: 20em; */
+  }
+
+  .flip_left .content{
+    text-align: left;
+    width: 25em;
+    justify-self: left;
+    /* margin-right: -250px;
+    margin-top: -20px; */
+  }
+}
+
+@media only screen and (min-width: 1200px){
+  body{
+    margin: .5em 1em;
+  }
+
+  nav{
+    margin-right: 200px;
+    background: none;
+  }
+
+  .wrapper{
+    width: 1200px;
+    /* margin: 0 auto; */
+  }
+
+    .hero-img{
+      left: unset;
+      right: 0;
+      width: 50%;
+      height: 100vh;
+      background-size: contain;
+      /* background-size: cover; */
+      background-position-x: 51%;
+      background-position-y: -120%;
+    }
+
+  /* .hero-img{
+    float: right;
+  } */
 }
