--- a/style1.css
+++ b/style1.css
@@ -1,5 +1,5 @@
 body{
-    background-color: grey;
+    background-color: #fa4446;
     font-family: 'Montserrat', sans-serif;
     margin: 1.5em;
     color: white;
@@ -36,7 +36,7 @@ a{
 }
 
 .logo{
-  color: darkolivegreen;
+  color: white;
   font-weight: bold;
 }
 
@@ -51,6 +51,10 @@ header{
   justify-content: space-between;
 }
 
+.hero p{
+  font-weight: 500;
+}
+
 nav{
   position: fixed;
   right: 0;
@@ -62,6 +66,10 @@ nav{
   text-transform: uppercase;
   transform: translateX(100%);
   transition: transform .5s ease-in-out;
+}
+
+.open-nav{
+  transform: translateX(0%);
 }
 
 nav ul{
@@ -123,9 +131,6 @@ nav ul a:hover{
   line-height: 1.48rem;
 }
 
-.open-nav{
-  transform: translateX(0%);
-}
 
 @media only screen and (min-width: 680px){
   body{
@@ -266,8 +271,16 @@ header .dashicon{
   }
 
   nav{
-    margin-right: 150px;
+    /* margin-right: -150px; */
     background: none;
+    text-align: center;
+    font-size: 13px;
+    font-weight: bold;
+  }
+
+  nav ul li{
+    padding: 20px;
+    text-align: center;
   }
 
   .wrapper{
@@ -285,8 +298,13 @@ header .dashicon{
       background-position-y: -120%;
     }
 
+    .dash{
+      transform: rotate(180deg);
+    }
+
   .more-info{
-      margin: 0 auto;
+      margin: 0 12%;
+      width: 100%;
     }
 
   .feature{
